--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oriental Computer Institute - Learn More, Pay Less | IT Training Diva</title>
-    <meta name="description" content="Oriental Computer Institute in Diva - Premium IT training with 30% Ganpati offer. Computer Fundamentals, MS Office, Tally, CCC courses. Job-oriented packages starting ₹7999." />
-    <meta name="author" content="Oriental Computer Institute" />
+    <title>IT - Oriental Computer Institute - Learn More, Pay Less | IT Training Diva</title>
+    <meta name="description" content="IT - Oriental Computer Institute in Diva - Premium IT training with 30% Ganpati offer. Computer Fundamentals, MS Office, Tally, CCC courses. Job-oriented packages starting ₹7999." />
+    <meta name="author" content="IT - Oriental Computer Institute" />
     <meta name="keywords" content="computer institute diva, IT training, MS Office course, Tally Prime, CCC course, computer education, job training, oriental computer" />
 
-    <meta property="og:title" content="Oriental Computer Institute - Learn More, Pay Less | IT Training Diva" />
+    <meta property="og:title" content="IT - Oriental Computer Institute - Learn More, Pay Less | IT Training Diva" />
     <meta property="og:description" content="Premium IT training institute in Diva offering Computer Fundamentals, MS Office, Tally Prime, CCC courses with 30% Ganpati special discount." />
     <meta property="og:type" content="website" />
 
